# air-gradient-pro-rs

./: .gdbinit  .gitignore  Cargo.toml  Embed.toml  LICENSE-APACHE  LICENSE-MIT  README.md  agp.robot  build.rs  memory.x  rust-toolchain.toml  tests.robot
.cargo/: config
.github/workflows/: ci.yml  dev_artifacts.yml  integration_tests.yml  release.yml
bootloader/: Cargo.toml  README.md  build.rs  memory.x
bootloader/.cargo/: config
bootloader/doc/: application_update.puml  bootloader_startup.puml
bootloader/src/: boot_config.rs  config.rs  lib.rs  logger.rs  main.rs  reset_reason.rs  ucs.rs
doc/: application_update.puml  bootloader_startup.puml  fw_archive_build.puml  fw_update_sequence.puml  pms_timing.puml  system_architecture.puml  timing.puml
firmware/: Cargo.toml  Embed.toml  agp_memory_slot_0.x  agp_memory_slot_1.x  build.rs  memory.x
firmware/.cargo/: config
firmware/src/: config.rs  display.rs  logger.rs  main.rs  panic_handler.rs  shared_i2c.rs  util.rs
firmware/src/net/: eth.rs  mod.rs  storage.rs
firmware/src/sensors/: mod.rs  pms5003.rs  s8lp.rs
firmware/src/tasks/: data_manager.rs  display.rs  mod.rs  net.rs  pms5003.rs  sgp41.rs  update_manager.rs  watchdog.rs
host_tools/agp-linker/: Cargo.toml  README.md
host_tools/agp-linker/src/: main.rs
host_tools/air-gradient-cli/: Cargo.toml  README.md
host_tools/air-gradient-cli/.cargo/: config
host_tools/air-gradient-cli/src/: archive_util.rs  device_util.rs  interruptor.rs  main.rs  measurement.rs  opts.rs
host_tools/air-gradient-cli/src/command/: extract_archive.rs  influx_relay.rs  listen.rs  mod.rs
host_tools/air-gradient-cli/src/command/device/: info.rs  mod.rs  reboot.rs  update.rs
host_tools/scripts/: agp-linker-script  erase-boot-config  erase-boot-slot  erase-fw-slot0  erase-fw-slot1  read-boot-slot  read-fw-slot0  read-fw-slot1
libraries/: README.md
libraries/bootloader-support/: Cargo.toml
libraries/bootloader-support/src/: lib.rs  reset_reason.rs
libraries/env-config/: Cargo.toml
libraries/env-config/src/: lib.rs
libraries/update-manager/: Cargo.toml
libraries/update-manager/src/: lib.rs
libraries/wire-protocols/: Cargo.toml
libraries/wire-protocols/src/: broadcast.rs  device.rs  lib.rs
renode/: agp.resc  cargo-runner.sh  dev_board.repl  emulate.resc  nucleo_f429zi.repl  setup-network.sh
renode/peripherals/: ENC28J60.cs  PMS5003.cs  S8LP.cs  SGP41.cs  SH1106.cs  SHT31.cs  STM32F4_RCC.cs  STM32_Timer.cs  STM32_UART.cs
renode/platform/: stm32f411.repl
src/: config.rs  display.rs  entry.rs  firmware_main.rs  i2c_devices.rs  logger.rs  main.rs  panic_handler.rs  phy.rs  rtc.rs  shared_i2c.rs  test_runner.rs
src/eth/: mod.rs
src/net/: eth.rs  mod.rs  phy.rs  storage.rs
src/sensors/: mod.rs  pms5003.rs  s8lp.rs  sgp41.rs  sht31.rs
src/tasks/: data_manager.rs  display.rs  mod.rs  net.rs  pms5003.rs  s8lp.rs  sgp41.rs  sht31.rs
test_resources/: README.md
