[package]
name = "air-gradient-pro-rs"
description = "Rust firmware for the AirGradient Pro"
version = "0.1.0"
edition = "2021"
authors = ["Jon Lamb"]
build = "build.rs"

[[bin]]
name = "air-gradient-pro"
path = "src/main.rs"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rtic-monotonic = "1.0"
cortex-m-rtic = "1.1"
log = "0.4"
sh1106 = "0.4"
gas-index-algorithm = "0.1"

[dependencies.wire-protocols]
path = "libraries/wire-protocols"

# TODO - upstream these changes
[dependencies.pms-7003]
git = "https://github.com/jonlamb-gh/pms-7003.git"
branch = "various-changes"

# TODO - upstream these changes
[dependencies.sgp41]
git = "https://github.com/jonlamb-gh/sgp41.git"
branch = "various-changes"

# TODO - upstream these changes
[dependencies.sht3x]
git = "https://github.com/jonlamb-gh/sht3x-rs.git"
branch = "various-changes"

# TODO - upstream these changes
[dependencies.enc28j60]
git = "https://github.com/jonlamb-gh/enc28j60.git"
branch = "cleanup"

[dependencies.stm32f4xx-hal]
version = "0.15"
features = ["rt", "stm32f411", "rtic"]

[dependencies.smoltcp]
version = "0.9"
default-features = false
features = [
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    #"log",
    #"verbose"
]

[dependencies.embedded-graphics]
version = "0.7"
default-features = false

[dependencies.shared-bus]
version = "0.2"
default-features = false
features = ["cortex-m"]

[build-dependencies.built]
version = "0.5"
features = ["git2", "chrono"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
