[package]
name = "agp-bootloader"
description = "Bootloader for the AirGradient Pro firmware"
version = "0.2.0"
edition = "2021"
authors = ["Jon Lamb"]
build = "build.rs"

[[bin]]
name = "bootloader"
path = "src/main.rs"

[lib]
name = "bootloader_lib"
path = "src/lib.rs"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
log = "0.4"
static_assertions = "1.1"

[dependencies.stm32f4xx-hal]
version = "0.17"
features = ["rt", "stm32f411"]

[dependencies.bootloader-support]
path = "../libraries/bootloader-support"

[build-dependencies.built]
version = "0.6"
features = ["git2", "chrono"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
