[package]
name = "agp-bootloader"
description = "Bootloader for the AirGradient Pro firmware"
version = "0.4.1"
edition = "2021"
authors = ["Jon Lamb"]
build = "build.rs"

[[bin]]
name = "bootloader"
path = "src/main.rs"

[lib]
name = "bootloader_lib"
path = "src/lib.rs"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
log = "0.4"
static_assertions = "1.1"

[dependencies.stm32f4xx-hal]
version = "0.17"
features = ["rt", "stm32f411"]

[dependencies.bootloader-support]
path = "../libraries/bootloader-support"

[build-dependencies.built]
version = "0.7"
features = ["git2", "chrono"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[package.metadata.renode]
# NOTE: currently requires nightly build until next release, using 1.14.0+20231008gitebcb1b6b
# https://builds.renode.io/renode-latest.linux-portable.tar.gz
# renode = '/opt/renode_1.14.0+20231008gitebcb1b6b_portable/renode'
machine-name = 'agp-bootloader'
using-sysbus = true
init-commands = [
    'include @../renode/peripherals/STM32F4_RCC.cs',
    'include @../renode/peripherals/STM32_Timer.cs',
    'include @../renode/peripherals/STM32_UART.cs',
]
variables = [
    # Set random board UNIQUE ID
    '''
    python "import _random"
    python "rand = _random.Random()"

    $id1 = `python "print rand.getrandbits(32)"`
    $id2 = `python "print rand.getrandbits(32)"`
    $id3 = `python "print rand.getrandbits(32)"`
    ''',
]
platform-descriptions = [
    '../renode/platform/stm32f411.repl',
    'led: Miscellaneous.LED @ gpioPortC',
    '''
    gpioPortC:
        13 -> led@0
    ''',
]
pre-start-commands = [
    #'logFile @/tmp/agp_bootloader_renode.log true',
    'cpu PerformanceInMips 1',
    'showAnalyzer sysbus.usart6',
    'rcc resetReason PowerOnReset',
    '''
    sysbus.usart2 AddLineHook "PANIC" "Antmicro.Renode.Logging.Logger.Log(LogLevel.Error, line)"
    sysbus.usart2 AddLineHook "test result: ok" "Antmicro.Renode.Emulator.Exit()"
    ''',
]
reset = '''
sysbus LoadELF $bin

sysbus WriteDoubleWord 0x1FFF7A10 $id1
sysbus WriteDoubleWord 0x1FFF7A14 $id2
sysbus WriteDoubleWord 0x1FFF7A18 $id3

# Flash size KB
sysbus WriteDoubleWord 0x1FFF7A22 512
'''
