[package]
name = "air-gradient-pro-rs"
description = "Rust firmware for the AirGradient Pro"
version = "0.3.0"
edition = "2021"
authors = ["Jon Lamb"]
build = "build.rs"

[[bin]]
name = "air-gradient-pro"
path = "src/main.rs"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rtic-monotonic = "1.0"
cortex-m-rtic = "1.1"
log = "0.4"
static_assertions = "1.1"
gas-index-algorithm = "0.1"
profont = "0.7"
heapless = "0.7"
sh1106 = "0.5"

[dependencies.wire-protocols]
path = "../libraries/wire-protocols"

[dependencies.bootloader-support]
path = "../libraries/bootloader-support"

[dependencies.update-manager]
path = "../libraries/update-manager"

[dependencies.agp-bootloader]
path = "../bootloader"

[dependencies.aqi]
version = "0.2"
default-features = false

# TODO - upstream these changes
[dependencies.pms-7003]
git = "https://github.com/jonlamb-gh/pms-7003.git"
branch = "various-changes"

# TODO - upstream these changes
[dependencies.sgp41]
git = "https://github.com/jonlamb-gh/sgp41.git"
branch = "various-changes"

# TODO - upstream these changes
[dependencies.sht3x]
git = "https://github.com/jonlamb-gh/sht3x-rs.git"
branch = "various-changes"

# TODO - upstream these changes
[dependencies.enc28j60]
git = "https://github.com/jonlamb-gh/enc28j60.git"
branch = "cleanup"

[dependencies.stm32f4xx-hal]
version = "0.17"
features = ["rt", "stm32f411", "rtic"]

[dependencies.smoltcp]
version = "0.10"
default-features = false
features = [
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    #"log",
    #"verbose"
]

[dependencies.embedded-graphics]
version = "0.8"
default-features = false

[dependencies.shared-bus]
version = "0.3"
default-features = false
features = ["cortex-m"]

[build-dependencies.built]
version = "0.6"
features = ["git2", "chrono"]

[build-dependencies.env-config]
path = "../libraries/env-config"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[package.metadata.renode]
machine-name = 'agp'
using-sysbus = true
renode = '${HOME}/repos/forks/renode-agp-dev/renode'
variables = [
    # bootloader ELF
    '$bootloader_elf = @../bootloader/target/thumbv7em-none-eabihf/release/bootloader',
    '$tap ?= "renode-tap0"',
    # Set random board UNIQUE ID
    '''
    python "import _random"
    python "rand = _random.Random()"

    $id1 = `python "print rand.getrandbits(32)"`
    $id2 = `python "print rand.getrandbits(32)"`
    $id3 = `python "print rand.getrandbits(32)"`
    ''',
    # TODO - add support for these in renode-run
    'include @../renode/peripherals/STM32_Timer.cs',
    'include @../renode/peripherals/STM32_UART.cs',
    'include @../renode/peripherals/SH1106.cs',
    'include @../renode/peripherals/SGP41.cs',
    'include @../renode/peripherals/SHT31.cs',
    'include @../renode/peripherals/PMS5003.cs',
]
platform-descriptions = [
    '../renode/platform/stm32f411.repl',
    'led: Miscellaneous.LED @ gpioPortC',
    '''
    gpioPortC:
        13 -> led@0

    ''',
    '''
    ethernet: Network.ENC28J60 @ spi2i2s2
        -> gpioPortA@8
    ''',
    '''
    sh1106 : Video.SH1106 @ i2c2 0x3C
        FramesPerVirtualSecond: 10
    ''',
    '''
    sgp41 : Sensors.SGP41 @ i2c2 0x59
        SerialNumber: 0xBBFF
        VocTicks: 1024
        NoxTicks: 2048
    ''',
    '''
    sht31 : Sensors.SHT31 @ i2c2 0x44
        SerialNumber: 0xAABB
        Temperature: 40
        Humidity: 85
    ''',
    '''
    pms5003 : UART.PMS5003 @ usart2
        PM2_5_atm: 10
    ''',
]
pre-start-commands = [
    'logFile @/tmp/agp_renode.log true',
    'cpu PerformanceInMips 1',
    
    # Suppress most warnings
    'logLevel 3 sysbus',

    # TODO - hack for the delay timer
    'timer4 Frequency 2000000000',
    #'timer4 Frequency 1000',
    'logLevel -1 timer4',
    
    'logLevel -1 usart2',
    'logLevel -1 usart2.pms5003',
    
    # TODO - hack for the delay timer
    'timer10 Frequency 2000000000',
    'logLevel -1 i2c2.sht31',
    
    # TODO - hack for the delay timer
    'timer11 Frequency 2000000000',
    'logLevel -1 i2c2.sgp41',

    'showAnalyzer usart6',
    'showAnalyzer i2c2.sh1106',

    '''
    sysbus.usart2 AddLineHook "PANIC" "Antmicro.Renode.Logging.Logger.Log(LogLevel.Error, line)"
    sysbus.usart2 AddLineHook "test result: ok" "Antmicro.Renode.Emulator.Exit()"
    ''',
    #'machine StartGdbServer 3333',
]
#omit-start = true
# TODO - instead of loading the bootloader, just write default boot config to flash memory
# use a top-level renode script for running with both bootloader and firmware
reset = '''
sysbus LoadELF $bin

sysbus LoadELF $bootloader_elf

sysbus WriteDoubleWord 0x1FFF7A10 $id1
sysbus WriteDoubleWord 0x1FFF7A14 $id2
sysbus WriteDoubleWord 0x1FFF7A18 $id3

# Flash size KB
sysbus WriteDoubleWord 0x1FFF7A22 512
'''
