[package]
name = "air-gradient-cli"
authors = ["Jon Lamb"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "air-gradient"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2", features = ["derive", "env", "color", "string"] }
ctrlc = { version = "3.2", features=["termination"] }
anyhow = "1.0"
chrono = "0.4"

[dependencies.wire-protocols]
path = "../../libraries/wire-protocols"
