[package]
name = "air-gradient-cli"
authors = ["Jon Lamb"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "air-gradient"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2", features = ["derive", "env", "color", "string"] }
ctrlc = { version = "3.2", features=["termination"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "net", "signal", "tracing"] }
futures = "0.3"
anyhow = "1.0"
chrono = "0.4"
aqi = "0.2"
influxdb2-derive = "0.1"
#influxdb2 = "0.3"
# TODO - just running in my local network, so doing the easy thing for cross compilation
influxdb2 = { version = "0.3", features = ["rustls"], default-features = false }

[dependencies.wire-protocols]
path = "../../libraries/wire-protocols"
