[package]
name = "air-gradient-cli"
authors = ["Jon Lamb"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "air-gradient"
path = "src/main.rs"

[features]
default = ["native-tls"]
native-tls = ["influxdb2/native-tls"]
rustls = ["influxdb2/rustls"]

[dependencies]
clap = { version = "4.2", features = ["derive", "env", "color", "string"] }
ctrlc = { version = "3.2", features=["termination"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "net", "signal", "tracing"] }
futures = "0.3"
anyhow = "1.0"
chrono = "0.4"
aqi = "0.2"
influxdb2-derive = "0.1"
humantime = "2.1"
cpio = "0.2"
elf = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_with = "2.2"

[dependencies.influxdb2]
version = "0.3"
default-features = false

[dependencies.wire-protocols]
path = "../../libraries/wire-protocols"

[dependencies.bootloader-support]
path = "../../libraries/bootloader-support"
