[package]
name = "update-manager"
version = "0.1.0"
edition = "2021"
authors = ["Jon Lamb"]

[dependencies]

[dependencies.smoltcp]
version = "0.9"
default-features = false
features = ["medium-ethernet", "proto-ipv4", "socket-tcp"]

[dependencies.wire-protocols]
path = "../wire-protocols"

[dependencies.bootloader-support]
path = "../bootloader-support"
